--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.SiPolan"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.onboarding.OnboardingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_onboarding"
+            android:theme="@style/Theme.SiPolan" />
+        <activity
             android:name=".ui.activity.splash.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -25,7 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
