Adding Sign In Component Activity and Changing modifer usable from child to root composeable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activity.signin.SignInActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
