Adding SignUpActivity to Manifest and Copy SignInActivity to SignUpActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity
             android:name=".ui.activity.signin.SignInActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activity.signup.SignUpActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
