--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name=".ui.activity.signup.SignUpActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activity.forgot.ForgotActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
