--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".ui.activity.forgot.ForgotActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activity.verification.VerificationActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
